--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "Shared"]
 	path = Shared
 	url = https://github.com/OSGP/Shared.git
-	branch = development
+	branch = SLIM-1626-Make-GprsOperationMode-ConfigurationFlagType-optional-for-SetConfigurationObject-SLIM-1060
+
