--- a/cucumber-tests-platform-microgrids/src/test/resources/cucumber-tests-platform-microgrids.properties
+++ b/cucumber-tests-platform-microgrids/src/test/resources/cucumber-tests-platform-microgrids.properties
@@ -17,6 +17,14 @@ iec61850.mock.serverName=WAGO61850Server
 iec61850.rtu.response.wait.check.interval=2000
 iec61850.rtu.response.wait.fail.duration=60000
 
+# When waiting for the RTU response data cleanup job to have executed on its
+# cron trigger, and have removed the response data for a correlation UID for
+# which the response has not been retrieved for a while, what is the number
+# of times to retry checking the data, and what is the interval between the
+# repeated checks in milliseconds.
+iec61850.rtu.response.cleanup.wait.retries=60
+iec61850.rtu.response.cleanup.wait.delay=2000
+
 web.service.template.default.uri.microgrids.adhocmanagement=osgp-adapter-ws-microgrids/microgrids/adHocManagementService
 jaxb2.marshaller.context.path.microgrids.adhocmanagement=com.alliander.osgp.adapter.ws.schema.microgrids.adhocmanagement
 jaxb2.marshaller.context.path.microgrids.notification=com.alliander.osgp.adapter.ws.schema.microgrids.notification
