--- a/cucumber-tests-platform-microgrids/src/test/resources/cucumber-tests-platform-microgrids.properties
+++ b/cucumber-tests-platform-microgrids/src/test/resources/cucumber-tests-platform-microgrids.properties
@@ -10,11 +10,9 @@ iec61850.mock.port=62102
 iec61850.mock.networkaddress=${server.domain}
 iec61850.mock.serverName=WAGO61850Server
 
-# When waiting for RTU response data availability for a correlation UID
-# retrieved earlier, what is the maximum duration after which a test will fail,
-# and what is the interval to periodically check if there is data.
-# Both values in milliseconds.
-iec61850.rtu.response.wait.check.interval=2000
+# When waiting for RTU response notification for a correlation UID retrieved
+# earlier, what is the maximum duration in milliseconds after which a test
+# will fail,
 iec61850.rtu.response.wait.fail.duration=60000
 
 # When waiting for the RTU response data cleanup job to have executed on its
