--- a/.gitmodules
+++ b/.gitmodules
@@ -9,11 +9,11 @@
 [submodule "Platform"]
 	path = Platform
 	url = https://github.com/OSGP/Platform.git
-	branch = development
+	branch = feature-SLIM-1134-AutomatedTestsForFunctionalExceptionsEncryptionKeys
 [submodule "Protocol-Adapter-DLMS"]
 	path = Protocol-Adapter-DLMS
 	url = https://github.com/OSGP/Protocol-Adapter-DLMS.git
-	branch = development
+	branch = feature-SLIM-1134-AutomatedTestsForFunctionalExceptionsEncryptionKeys
 [submodule "Protocol-Adapter-IEC61850"]
 	path = Protocol-Adapter-IEC61850
 	url = https://github.com/OSGP/Protocol-Adapter-IEC61850.git
