Added IntelliJ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ local.properties
 .settings/
 .loadpath
 
+####################
+# IntelliJ
+####################
+*.iml
+.idea/
 
 # External tool builders
 .externalToolBuilders/
