--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,6 @@
 [submodule "Shared"]
 	path = Shared
 	url = https://github.com/OSGP/Shared.git
+	branch = development
 	branch = SLIM-1668_Scan_M-Bus_channels
 
