--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "Shared"]
 	path = Shared
-	url = git://github.com/OSGP/Shared.git
-	branch = SLIM-1668_Scan_M-Bus_channels
+	url = https://github.com/OSGP/Shared.git
+	branch = development
 
