--- a/protocol-simulator-iec61850/pom.xml
+++ b/protocol-simulator-iec61850/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.alliander.osgp</groupId>
   <artifactId>osgp-protocol-simulator-iec61850</artifactId>
   <name>osgp-protocol-simulator-iec61850</name>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
   <!-- Description, Organization, Licenses, URL and Distribution Management elements are needed for the maven-jxr-plugin 
     to generate a maven site -->
   <description>Simulator for IEC61850 Protocol.</description>
@@ -52,7 +52,7 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
-    <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
+    <spring.boot.version>1.5.13.RELEASE</spring.boot.version>
     <openmuc.openiec61850.version>1.5.0</openmuc.openiec61850.version>
     
   </properties>
@@ -61,6 +61,17 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-tomcat</artifactId>
+        <scope>provided</scope>
     </dependency>
 
     <dependency>
