--- a/protocol-simulator-iec61850/pom.xml
+++ b/protocol-simulator-iec61850/pom.xml
@@ -95,6 +95,19 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
       <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <attachClasses>true</attachClasses>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>com.alliander.osgp.simulator.protocol.iec61850.SimulatorApplication</mainClass>
+            </manifest>
+         </archive>
+       </configuration>
+    </plugin>
+      <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <descriptorRefs>
