Updates pom files
Adds classes classifier

--- a/parent-integration-tests/pom.xml
+++ b/parent-integration-tests/pom.xml
@@ -291,6 +291,7 @@
         <groupId>com.alliander.osgp</groupId>
         <artifactId>osgp-protocol-simulator-iec61850</artifactId>
         <version>${osgp.iec61850.simulator.version}</version>
+        <classifier>classes</classifier>
       </dependency>
 
       <dependency>
