--- a/cucumber-tests-platform-microgrids/pom.xml
+++ b/cucumber-tests-platform-microgrids/pom.xml
@@ -138,6 +138,7 @@
     <dependency>
       <groupId>com.alliander.osgp</groupId>
       <artifactId>osgp-protocol-simulator-iec61850</artifactId>
+      <classifier>classes</classifier>
     </dependency>
 
   </dependencies>
