ZS-341 ~ Use default properties for activemq

--- a/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -105,7 +105,7 @@ iec61850.default.longitude=5.291266
 # =========================================================
 
 # --- JMS Settings ---
-jms.activemq.broker.url=failover:(tcp://localhost:61616)?timeout=10000
+jms.activemq.broker.url=failover:(tcp://localhost:61616)
 
 jms.default.initial.redelivery.delay=10000
 jms.default.maximum.redeliveries=1
@@ -114,12 +114,12 @@ jms.default.redelivery.delay=30000
 jms.default.back.off.multiplier=1
 jms.default.use.exponential.back.off=false
 
-jms.activemq.connection.pool.block.if.session.pool.is.full=false
-#jms.activemq.connection.pool.block.if.session.pool.is.full.timeout=-1
-jms.activemq.connection.pool.expiry.timeout=300000
-jms.activemq.connection.pool.time.between.expiration.check.millis=120000
+jms.activemq.connection.pool.block.if.session.pool.is.full=true
+jms.activemq.connection.pool.block.if.session.pool.is.full.timeout=-1
+jms.activemq.connection.pool.expiry.timeout=0
+jms.activemq.connection.pool.time.between.expiration.check.millis=-1
 jms.activemq.connection.pool.idle.timeout=30000
-jms.activemq.connection.send.timeout=1000
+jms.activemq.connection.send.timeout=0
 
 # =========================================================
 #  JMS Settings: Incoming IEC61850 Requests 
