ZS-345 ~ Implements closing connections when activemq is down (#167)

--- a/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -40,6 +40,8 @@ entitymanager.packages.to.scan=com.alliander.osgp.adapter.protocol.iec61850.doma
 # APPLICATION CONFIG		
 # =========================================================
 
+close.connections.on.broker.failure=false
+
 #Max retry count. The number of times the communication with the device is retried
 retrycount.max=1
 
