--- a/parent-pa-oslp/pom.xml
+++ b/parent-pa-oslp/pom.xml
@@ -66,7 +66,8 @@
     <orika.version>1.5.1</orika.version>
     <netty.version>3.9.4.Final</netty.version>
     <jxr.version>2.5</jxr.version>
-    <maven.project.info.reports.plugin.version>2.9</maven.project.info.reports.plugin.version>
+    <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
+    <maven.site.plugin>3.7.1</maven.site.plugin>
     <apache.activemq.version>5.10.0</apache.activemq.version>
     <commons.pool.version>1.6</commons.pool.version>
     <jackson.jaxrs.version>2.8.6</jackson.jaxrs.version>
@@ -441,11 +442,13 @@
             </flowInitContext>
           </configuration>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.compiler.plugin.version}</version>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -456,6 +459,12 @@
           <artifactId>maven-jxr-plugin</artifactId>
           <version>${jxr.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>${maven.site.plugin}</version>
+        </plugin>
+
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
