FLEX-4396 ~ Fixes JXR version problem.

--- a/parent-pa-iec61850/pom.xml
+++ b/parent-pa-iec61850/pom.xml
@@ -525,7 +525,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
-        <version>${xjr.version}</version>
+        <version>${jxr.version}</version>
       </plugin>
     </plugins>
   </reporting>
