FLEX-4396 ~ Fixes maven site problem for IEC61850 simulator.

--- a/protocol-simulator-iec61850/pom.xml
+++ b/protocol-simulator-iec61850/pom.xml
@@ -64,6 +64,9 @@
     <spring.boot.version>1.5.13.RELEASE</spring.boot.version>
     <openmuc.openiec61850.version>1.5.0</openmuc.openiec61850.version>
     
+    <jxr.version>2.5</jxr.version>
+    <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
+    <maven.site.plugin>3.7.1</maven.site.plugin>
   </properties>
 
   <dependencies>
@@ -103,6 +106,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+
       <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-war-plugin</artifactId>
@@ -115,7 +119,8 @@
             </manifest>
          </archive>
        </configuration>
-    </plugin>
+      </plugin>
+
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
@@ -137,9 +142,24 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>${maven.project.info.reports.plugin.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <version>${jxr.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>${maven.site.plugin}</version>
+      </plugin>
     </plugins>
 
   </build>
-
 
 </project>
