--- a/protocol-simulator-iec61850/pom.xml
+++ b/protocol-simulator-iec61850/pom.xml
@@ -8,7 +8,8 @@
         http://www.apache.org/licenses/LICENSE-2.0
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -16,8 +17,8 @@
   <artifactId>osgp-protocol-simulator-iec61850</artifactId>
   <name>osgp-protocol-simulator-iec61850</name>
   <packaging>war</packaging>
-  <!-- Description, Organization, Licenses, URL and Distribution Management elements are needed for the maven-jxr-plugin 
-    to generate a maven site -->
+  <!-- Description, Organization, Licenses, URL and Distribution Management 
+    elements are needed for the maven-jxr-plugin to generate a maven site -->
   <description>Simulator for IEC61850 Protocol.</description>
   <organization>
     <name>OSGP</name>
@@ -41,14 +42,6 @@
   </distributionManagement>
   <version>4.29.0-SNAPSHOT</version>
 
-  <!-- <parent> -->
-  <!-- <groupId>com.alliander.osgp</groupId> -->
-  <!-- <artifactId>parent-pa-iec61850</artifactId> -->
-  <!-- <version>3.2.0-SNAPSHOT</version> -->
-  <!-- <relativePath>../parent-pa-iec61850/pom.xml</relativePath> -->
-  <!-- </parent> -->
-
-
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -63,7 +56,7 @@
     <java.version>1.8</java.version>
     <spring.boot.version>1.5.13.RELEASE</spring.boot.version>
     <openmuc.openiec61850.version>1.5.0</openmuc.openiec61850.version>
-    
+
     <jxr.version>2.5</jxr.version>
     <maven.project.info.reports.plugin.version>3.0.0</maven.project.info.reports.plugin.version>
     <maven.site.plugin>3.7.1</maven.site.plugin>
@@ -108,8 +101,8 @@
       </plugin>
 
       <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-war-plugin</artifactId>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
         <configuration>
           <attachClasses>true</attachClasses>
           <archive>
@@ -117,8 +110,8 @@
               <addClasspath>true</addClasspath>
               <mainClass>com.alliander.osgp.simulator.protocol.iec61850.SimulatorApplication</mainClass>
             </manifest>
-         </archive>
-       </configuration>
+          </archive>
+        </configuration>
       </plugin>
 
       <plugin>
