--- a/web-demo-app/src/main/resources/web-demo-app.properties
+++ b/web-demo-app/src/main/resources/web-demo-app.properties
@@ -9,10 +9,10 @@ web.service.keystore.password=1234
 web.service.keystore.type=pkcs12
 
 # OSGP Client Certificate
-web.service.client.certificate=test-org.pfx
+web.service.client.certificate=LianderNetManagement.pfx
 
 # OSGP Organization Identification
-organisation.identification=test-org
+organisation.identification=LianderNetManagement
 user.name=demo-app-user
 application.name=demo-app
 
