FLEX-4396 ~ Fixes distribution management issue.

--- a/parent-os-webapps/pom.xml
+++ b/parent-os-webapps/pom.xml
@@ -32,6 +32,17 @@
   </licenses>
   <!-- URL is passed in as a maven argument: -Dmaven.site.url=http://my/url/for/the/site -->
   <url>${maven.site.url}</url>
+  <distributionManagement>
+    <site>
+      <id>os-webapps</id>
+      <name>os-webapps</name>
+      <!-- <url>Use this example URL to generate maven site locally and have 
+        it deployed to a folder using: mvn site site:deploy or mvn site site:stage -->
+      <!-- <url>file:///C:/Users/Kevin/Desktop/shared-components</url> -->
+      <!-- URL is passed in as a maven argument: -Dmaven.site.distributionManagement.site.url=file:////the/path/to/deploy/the/site/to -->
+      <url>${maven.site.distributionManagement.site.url}</url>
+    </site>
+  </distributionManagement>
 
   <properties>
     <module.baseUri>${project.baseUri}/../</module.baseUri>
