--- a/osgp-dto/pom.xml
+++ b/osgp-dto/pom.xml
@@ -18,7 +18,7 @@
   <description>DTO module.</description>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
