--- a/parent-shared/pom.xml
+++ b/parent-shared/pom.xml
@@ -13,7 +13,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>parent-shared</artifactId>
-  <groupId>com.alliander.osgp</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <version>4.30.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>parent-shared</name>
