--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -19,7 +19,7 @@
   <description>Shared module.</description>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-shared</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-shared/pom.xml</relativePath>
