OC-251: Rename POM groupId org.osgpfoundation.osgp to org.opensmartgridplatform.

--- a/osgp-ws-distributionautomation/pom.xml
+++ b/osgp-ws-distributionautomation/pom.xml
@@ -17,7 +17,7 @@
     <relativePath>../parent-shared/pom.xml</relativePath>
   </parent>
 
-  <groupId>org.osgpfoundation.osgp</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>osgp-ws-distributionautomation</artifactId>
 
   <build>
