OC-251: Rename POM groupId com.alliander.osgp to org.opensmartgridplatform.

--- a/osgp-domain-distributionautomation/pom.xml
+++ b/osgp-domain-distributionautomation/pom.xml
@@ -21,7 +21,7 @@
   <description>Domain entities module for Distribution Automation domain.</description>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
@@ -33,7 +33,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
     </dependency>
 
