--- a/osgp-adapter-domain-distributionautomation/pom.xml
+++ b/osgp-adapter-domain-distributionautomation/pom.xml
@@ -12,7 +12,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
@@ -34,15 +34,15 @@
       <artifactId>osgp-domain-distributionautomation</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
     </dependency>
 
