--- a/osgp-adapter-domain-smartmetering/pom.xml
+++ b/osgp-adapter-domain-smartmetering/pom.xml
@@ -19,7 +19,7 @@
 
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
@@ -53,15 +53,15 @@
   <dependencies>
     <!-- Alliander -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
     </dependency>
 
