--- a/osgp-adapter-ws-tariffswitching/pom.xml
+++ b/osgp-adapter-ws-tariffswitching/pom.xml
@@ -19,7 +19,7 @@
   <description>Web service module for tariff switching.</description>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-platform</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-platform/pom.xml</relativePath>
@@ -59,15 +59,15 @@
   <dependencies>
     <!-- Alliander -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-adapter-ws-shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-ws-tariffswitching</artifactId>
     </dependency>
 
