OC-251: Rename packages com.alliander.osgp.* and org.osgpfoundation.osgp.* to org.opensmartgridplatform.*.

--- a/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
+++ b/osgp-adapter-ws-microgrids/src/main/resources/osgp-adapter-ws-microgrids.properties
@@ -80,7 +80,7 @@ flyway.init.on.migrate=true
 #EntityManager
 #Declares the base package of the entity classes
 entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.ws.domain.entities
-entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.microgrids.entities,com.alliander.osgp.domain.core.entities
+entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.microgrids.entities,org.opensmartgridplatform.domain.core.entities
 
 #WebServiceTemplate
 #Web service truststore
