--- a/osgp-adapter-domain-microgrids/pom.xml
+++ b/osgp-adapter-domain-microgrids/pom.xml
@@ -29,7 +29,7 @@
   </properties>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-microgrids</artifactId>
