--- a/osgp-adapter-ws-admin/pom.xml
+++ b/osgp-adapter-ws-admin/pom.xml
@@ -62,7 +62,7 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
