--- a/osgp-adapter-ws-microgrids/pom.xml
+++ b/osgp-adapter-ws-microgrids/pom.xml
@@ -31,7 +31,7 @@
   </properties>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
