--- a/osgp-adapter-ws-shared-db/pom.xml
+++ b/osgp-adapter-ws-shared-db/pom.xml
@@ -34,7 +34,7 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
