--- a/osgp-adapter-domain-admin/pom.xml
+++ b/osgp-adapter-domain-admin/pom.xml
@@ -50,7 +50,7 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
