--- a/osgp-adapter-domain-smartmetering/pom.xml
+++ b/osgp-adapter-domain-smartmetering/pom.xml
@@ -51,7 +51,7 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-domain-core</artifactId>
