--- a/osgp-adapter-ws-smartmetering/pom.xml
+++ b/osgp-adapter-ws-smartmetering/pom.xml
@@ -57,7 +57,7 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
