--- a/osgp-core/pom.xml
+++ b/osgp-core/pom.xml
@@ -52,7 +52,7 @@
 
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
