--- a/osgp-domain-distributionautomation/pom.xml
+++ b/osgp-domain-distributionautomation/pom.xml
@@ -13,7 +13,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.osgpfoundation.osgp</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>osgp-domain-distributionautomation</artifactId>
   <name>osgp-domain-distributionautomation</name>
   <packaging>jar</packaging>
