--- a/osgp-logging/pom.xml
+++ b/osgp-logging/pom.xml
@@ -56,7 +56,7 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- Open Smart Grid Platform -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
