--- a/osgp-dlms/pom.xml
+++ b/osgp-dlms/pom.xml
@@ -17,7 +17,7 @@
   <description>DLMS library.</description>
 
   <parent>
-    <groupId>org.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-dlms</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-pa-dlms/pom.xml</relativePath>
@@ -30,11 +30,11 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
     </dependency>
 
