--- a/osgp-protocol-adapter-dlms/pom.xml
+++ b/osgp-protocol-adapter-dlms/pom.xml
@@ -19,7 +19,7 @@
   <description>Protocol Adapter for Device Message Language Specification.</description>
 
   <parent>
-    <groupId>org.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-dlms</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-pa-dlms/pom.xml</relativePath>
@@ -86,21 +86,21 @@
 
     <!-- Alliander -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>jasper-interface</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>org.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dlms</artifactId>
     </dependency>
 
