OC-251: Clean code.

--- a/osgp-protocol-adapter-dlms/pom.xml
+++ b/osgp-protocol-adapter-dlms/pom.xml
@@ -84,7 +84,7 @@
       <artifactId>jdlms</artifactId>
     </dependency>
 
-    <!-- Alliander -->
+    <!-- OSGP -->
     <dependency>
       <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
