--- a/web-device-simulator/pom.xml
+++ b/web-device-simulator/pom.xml
@@ -20,7 +20,7 @@
   <description>Device simulator for OSLP smart devices.</description>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-oslp</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-pa-oslp/pom.xml</relativePath>
@@ -163,11 +163,11 @@
 
     <!-- OSGP -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>oslp</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
   </dependencies>
