--- a/osgp-core-db-api-iec61850/pom.xml
+++ b/osgp-core-db-api-iec61850/pom.xml
@@ -19,7 +19,7 @@
   <description>Database API for core database.</description>
 
   <parent>
-    <groupId>com.alliander.osgp</groupId>
+    <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-pa-iec61850</artifactId>
     <version>4.30.0-SNAPSHOT</version>
     <relativePath>../parent-pa-iec61850/pom.xml</relativePath>
@@ -47,13 +47,13 @@
   </build>
 
   <dependencies>
-    <!-- Alliander -->
+    <!-- OSGP -->
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>osgp-dto</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.alliander.osgp</groupId>
+      <groupId>org.opensmartgridplatform</groupId>
       <artifactId>shared</artifactId>
     </dependency>
 
