--- a/protocol-simulator-iec61850/pom.xml
+++ b/protocol-simulator-iec61850/pom.xml
@@ -13,7 +13,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.alliander.osgp</groupId>
+  <groupId>org.opensmartgridplatform</groupId>
   <artifactId>osgp-protocol-simulator-iec61850</artifactId>
   <name>osgp-protocol-simulator-iec61850</name>
   <packaging>war</packaging>
